--- a/build.yaml
+++ b/build.yaml
@@ -5,20 +5,21 @@
 # pass flags to the build command, `snippet` to add a Zephyr snippet, and
 # `artifact-name` to assign a name to distinguish build outputs from each other:
 #
-board: [ "nice_nano_v2" ]
-shield: [ "corne_left", "corne_right" ]
-include:
-  - board: bdn9_rev2
-  - board: nice_nano_v2
-    shield: reviung41
-  - board: nice_nano_v2
-    shield: corne_left
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
-    artifact-name: corne_left_with_studio
+# board: [ "nice_nano_v2" ]
+# shield: [ "corne_left", "corne_right" ]
+# include:
+#   - board: bdn9_rev2
+#   - board: nice_nano_v2
+#     shield: reviung41
+#   - board: nice_nano_v2
+#     shield: corne_left
+#     snippet: studio-rpc-usb-uart
+#     cmake-args: -DCONFIG_ZMK_STUDIO=y
+#     artifact-name: corne_left_with_studio
 #
 ---
-
 include:
-  board: nice_nano
-  shield: sofle_dongle
+  - board: nrf52840dk_nrf52840
+    shield: sofle_left
+  - board: nrf52840dk_nrf52840
+    shield: sofle_right
